--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testCompile('org.junit.jupiter:junit-jupiter-params:5.7.2')
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.7.2'
+    implementation 'org.mockito:mockito-junit-jupiter:3.11.2'
 }
 
 test {
