--- a/src/main/resources/report/annual-report.properties
+++ b/src/main/resources/report/annual-report.properties
@@ -23,6 +23,9 @@ annual.header.right.format = Annual report for %tY year
 #   1$ is the left part of header (String)
 #   2$ is the right part of header (String)
 #
-annual.header.format =\      %1$s-20s %2$30s
+annual.header.format =\
+%n      %1$s-20s %2$30s%n\
+%n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
+%n      POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI
 
 
