Updated Annual Report

--- a/src/main/resources/report/annual-report.properties
+++ b/src/main/resources/report/annual-report.properties
@@ -22,10 +22,12 @@ annual.header.right.format = Annual report for %tY year
 # Used arguments:
 #   1$ is the left part of header (String)
 #   2$ is the right part of header (String)
-#
+#   3$...15$ is the months names
 annual.header.format =\
-%n      %1$s-20s %2$30s%n\
+%n      %1$-25s   %2$30s%n
+
+annual.months.format =\
 %n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
-%n      POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI
+%n      POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI%n
 
 
