Updated Annual Report

--- a/src/main/resources/report/annual-report.properties
+++ b/src/main/resources/report/annual-report.properties
@@ -8,7 +8,7 @@
 # Used arguments:
 #   1$ is the birthday (LocalDate)
 #
-annual.header.left.format = Birthday: %tA, %<tB %<td, %<tY
+annual.header.left.format = Birthday: %tF
 
 # Format for the left part of header
 #
@@ -24,7 +24,7 @@ annual.header.right.format = Annual report for %tY year
 #   2$ is the right part of header (String)
 #   3$...15$ is the months names
 annual.header.format =\
-%n      %1$-25s   %2$30s%n
+%n      %1$-33s %2$35s%n
 
 annual.months.format =\
 %n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
