Updated Annual Report

--- a/src/main/resources/report/annual-report.properties
+++ b/src/main/resources/report/annual-report.properties
@@ -30,4 +30,10 @@ annual.months.format =\
 %n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
 %n      POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI%n
 
+Well    = *
+Usually = +
+Danger  = 0
+Loose   = -
+Tired   = .
+Empty   = \ 
 
