--- a/src/main/resources/report/daily-report.properties
+++ b/src/main/resources/report/daily-report.properties
@@ -3,3 +3,37 @@
 # For format syntax please refer to class Formatter
 # https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/util/Formatter.html
 #
+
+# Format for a Daily Report
+#
+# Used arguments:
+#
+#   1$ is physical biorhythm (String)
+#   2$ is emotional biorhythm (String)
+#   3$ is intellectual biorhythm (String)
+#
+#   4$ is Intuition biorhythm (String)
+#   5$ is Aesthetic biorhythm (String)
+#   6$ is Awareness biorhythm (String)
+#   7$ is Spiritual biorhythm (String)
+#
+daily.report.format=\
+%n  Daily Biorhythm Report:%n\
+%n  Primary Biorhythms%n\
+%n       %s\
+%n       %s\
+%n       %s%n\
+%n  Secondary Biorhythms%n\
+%n       %s\
+%n       %s\
+%n       %s\
+%n       %s%n
+
+
+# Format for a string representation of a biorhythm
+#
+# Used arguments:
+#   $1 is name of a biorhythm (String)
+#   $2 is a biorhythm's value in percents (int)
+#
+daily.biorhythm.format = %-12s %4d %%
