Add format properties in summary-report.properties

--- a/src/main/resources/report/summary-report.properties
+++ b/src/main/resources/report/summary-report.properties
@@ -20,4 +20,22 @@ summary.header.format=\
 #
 short.biorhythm.format = %18s: %4d%%
 
+# Format for a stage description in the Summary Report
+# Please refer enum Stage in biorhythm package
+#
+# Used arguments:
+#   1$ is the name of a biorhythm (String)
+#   2$ are attributes for the biorhythm (String)
+#   3$ is date when the stage changed (String)
+#   3$ are days before the stage is changed (String)
+#
+
+ZERO=Today is a critical day for your %1$s attributes! \n\
+That means it is an important day to focus on your %$2s.%n
+
+POSITIVE_UP=Your are progressing in a positive cycle for your %1$s attributes, \n\
+and this will last until %$3s (%$4s). Take advantage of your enhanced %$2s!%n
+
+POSITIVE_DOWN=Your are in a positive cycle for your %1$s attributes, \n\
+which ends on %3$s (%4$s). Take advantage of your enhanced %2$s while they are at their peak.%n
 
