--- a/src/main/resources/report/age-info-report.properties
+++ b/src/main/resources/report/age-info-report.properties
@@ -1,3 +1,18 @@
+# Resources for Age Information
+#
+# For format syntax please refer to class Formatter
+# https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/util/Formatter.html
+#
+
+# Format for a general Age information
+#
+# Used arguments:
+#   1$ is a birthday (LocalDate)
+#   2$ is a Zodiac Sign (String)
+#   3$ is today (LocalDate)
+#   3$ is living days (int)
+#   4$ is an age in human friendly format (String)
+#
 format.ageInfo=\
 %n  Age Report%n\
 %n  Birthday: %tA, %<tB %<td, %<tY (%s)\
@@ -5,5 +20,12 @@ format.ageInfo=\
 %n      Days: %,d\
 %n       Age: %s%n
 
+#
+# Format for a Lucky Day message
+#
+# Used arguments:
+#   2$ is a Zodiac Sign (String)
+
 format.luckyDay=\
 %n  Today is a lucky day for a %2$s!%n
+
