--- a/src/main/resources/report/summary-report.properties
+++ b/src/main/resources/report/summary-report.properties
@@ -7,22 +7,21 @@
 #
 # Used arguments:
 #   1$ is the selected date (LocalDate)
-#   2$ is the selected week number in the year (int)
 #
-summary.header.format=\
-%n  Today's Biorhythm Summary Report%n%n
-
+summary.header.format=%n  Today's Biorhythm Summary Report%n%n
 # Format for a string representation of a biorhythm
 #
 # Used arguments:
 #   $1 is name of a biorhythm (String)
 #   $2 is a biorhythm's value in percents (int)
 #
-short.biorhythm.format = %18s: %4d%%
-
+short.biorhythm.format=%18s: %4d%%
+summary.biorhythm.name.format=%n%s%n%n
 #
-# Format for a stage description in the Summary Report
+# Format for a stage descriptions in the Summary Report
 # Please refer enum Stage in biorhythm package
+#
+# The keys corresponding to the constant names in enum Stage.
 #
 # Used arguments:
 #   1$ is the name of a biorhythm (String)
@@ -30,13 +29,18 @@ short.biorhythm.format = %18s: %4d%%
 #   3$ is date when the stage changed (String)
 #   3$ are days before the stage is changed (String)
 #
-
-ZERO=Today is a critical day for your %1$s attributes! \n\
-That means it is an important day to focus on your %$2s.%n
-
-POSITIVE_UP=Your are progressing in a positive cycle for your %1$s attributes, \n\
-and this will last until %$3s (%$4s). Take advantage of your enhanced %$2s!%n
-
-POSITIVE_DOWN=Your are in a positive cycle for your %1$s attributes, \n\
+ZERO=\
+Today is a critical day for your %1$s attributes! \
+That means it is an important day to focus on your %2$s.%n
+POSITIVE_UP=\
+Your are progressing in a positive cycle for your %1$s attributes, \
+and this will last until %3$s (%4$s). Take advantage of your enhanced %2$s!%n
+POSITIVE_DOWN=\
+Your are in a positive cycle for your %1$s attributes, \
 which ends on %3$s (%4$s). Take advantage of your enhanced %2$s while they are at their peak.%n
-
+NEGATIVE_DOWN=\
+Your are in a negative cycle for your %1$s attributes, which ends on %3$s (%4$s). \
+Your %2$s may not be at their highest, so it is a good opportunity to work on them!%n
+NEGATIVE_UP=\
+Your are in a negative %1$s cycle, but it coming to an end \
+on %3$s (%4$s)! Work on improving your %2$s as you near your next positive cycle!%n
