Fixed bugs in SummaryReport

--- a/src/main/resources/report/summary-report.properties
+++ b/src/main/resources/report/summary-report.properties
@@ -8,14 +8,14 @@
 # Used arguments:
 #   1$ is the selected date (LocalDate)
 #
-summary.header.format=%n  Today's Biorhythm Summary Report%n%n
+summary.header.format=%nToday's Biorhythm Summary Report%n%n
 # Format for a string representation of a biorhythm
 #
 # Used arguments:
 #   $1 is name of a biorhythm (String)
 #   $2 is a biorhythm's value in percents (int)
 #
-short.biorhythm.format=%18s: %4d%%
+short.biorhythm.format=%-12s %4d%%
 summary.biorhythm.name.format=%n%s%n%n
 #
 # Format for a stage descriptions in the Summary Report
@@ -31,16 +31,16 @@ summary.biorhythm.name.format=%n%s%n%n
 #
 ZERO=\
 Today is a critical day for your %1$s attributes! \
-That means it is an important day to focus on your %2$s.%n
+That means it is an important day to focus on your %2$s.
 POSITIVE_UP=\
 Your are progressing in a positive cycle for your %1$s attributes, \
-and this will last until %3$s (%4$s). Take advantage of your enhanced %2$s!%n
+and this will last until %3$s (%4$s). Take advantage of your enhanced %2$s!
 POSITIVE_DOWN=\
 Your are in a positive cycle for your %1$s attributes, \
-which ends on %3$s (%4$s). Take advantage of your enhanced %2$s while they are at their peak.%n
+which ends on %3$s (%4$s). Take advantage of your enhanced %2$s while they are at their peak.
 NEGATIVE_DOWN=\
 Your are in a negative cycle for your %1$s attributes, which ends on %3$s (%4$s). \
-Your %2$s may not be at their highest, so it is a good opportunity to work on them!%n
+Your %2$s may not be at their highest, so it is a good opportunity to work on them!
 NEGATIVE_UP=\
 Your are in a negative %1$s cycle, but it coming to an end \
-on %3$s (%4$s)! Work on improving your %2$s as you near your next positive cycle!%n
+on %3$s (%4$s)! Work on improving your %2$s as you near your next positive cycle!
