--- a/src/main/resources/lv/id/jc/service/date-navigator.properties
+++ b/src/main/resources/lv/id/jc/service/date-navigator.properties
@@ -3,3 +3,6 @@
 # For format syntax please refer to class Formatter
 # https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/util/Formatter.html
 #
+
+prompt=%tF > 
+
