Add move operations for quarters

--- a/src/main/resources/lv/id/jc/service/date-navigator.properties
+++ b/src/main/resources/lv/id/jc/service/date-navigator.properties
@@ -3,6 +3,23 @@
 # For format syntax please refer to class Formatter
 # https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/util/Formatter.html
 #
-
+# Format for Welcome Screen of Date Navigator
+#
+# Used arguments:
+#   1$ is the birthday (LocalDate)
+#   2$ is today (LocalDate)
+#
+welcome=\
+%nBirthday: %tA, %<tB %<td, %<tY\
+%n   Today: %tA, %<tB %<td, %<tY%n%n
+#
+# Format for the prompt
+#
+# Used arguments:
+#   1$ is a selected date (LocalDate)
+#
 prompt=%tF > 
 
+help=\
+%n Available commands:\
+%n {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years%n
