--- a/src/main/resources/lv/id/jc/service/date-navigator.properties
+++ b/src/main/resources/lv/id/jc/service/date-navigator.properties
@@ -11,15 +11,18 @@
 #
 welcome=\
 %nBirthday: %tA, %<tB %<td, %<tY\
-%n   Today: %tA, %<tB %<td, %<tY%n%n
+%nSelected: %tA, %<tB %<td, %<tY%n%n
 #
 # Format for the prompt
 #
 # Used arguments:
 #   1$ is a selected date (LocalDate)
 #
-prompt=%tF > 
+prompt=%tF> 
 
 help=\
-%n Available commands:\
-%n {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years%n
+Commands:\
+%n  {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years\
+%n  {today|now|birthday|tomorrow|yesterday|after tomorrow|before yesterday} - set the date\
+%n  {help|info} - this instruction\
+%n  {exit|quit} - finish the program%n
