Fixed errors in property files

--- a/src/main/resources/lv/id/jc/report/annual-report.properties
+++ b/src/main/resources/lv/id/jc/report/annual-report.properties
@@ -13,7 +13,7 @@ annual.header.left.format=Birthday: %tF
 # Used arguments:
 #   1$ is the selected date (LocalDate)
 #
-annual.header.right.format=Annual lv.id.jc.report for %tY year
+annual.header.right.format=Annual report for %tY year
 # Format for the header of Annual Biorhythms Report
 #
 # Used arguments:
