--- a/src/main/resources/lv/id/jc/report/daily-report.properties
+++ b/src/main/resources/lv/id/jc/report/daily-report.properties
@@ -16,7 +16,7 @@
 #   6$ is Awareness biorhythm (String)
 #   7$ is Spiritual biorhythm (String)
 #
-daily.lv.id.jc.report.format=\
+daily.report.format=\
 %n  Daily Biorhythm Report:%n\
 %n  Primary Biorhythms%n\
 %n       %s\
