--- a/src/main/resources/lv/id/jc/report/weekly-report.properties
+++ b/src/main/resources/lv/id/jc/report/weekly-report.properties
@@ -8,7 +8,7 @@
 #   1$ is the selected date (LocalDate)
 #   2$ is the selected week number in the year (int)
 #
-lv.id.jc.report.weekly.header.format=\
+weekly.header.format=\
 %n  Weekly Biorhythm Report\
 %n  Year: %d, Week #%d:%n
 # Format for a day in the Weekly Report
@@ -19,7 +19,7 @@ lv.id.jc.report.weekly.header.format=\
 #   3$ is emotional biorhythm (String)
 #   3$ is intellectual biorhythm (String)
 #
-lv.id.jc.report.weekly.day.format=\
+weekly.day.format=\
 %n  %1$-11tA %2$s\
 %n  %1$-4tb%1$-7td %3$s\
 %n  %1$-11tY %4$s%n
@@ -29,7 +29,7 @@ lv.id.jc.report.weekly.day.format=\
 #   $1 is name of a biorhythm (String)
 #   $2 is a biorhythm's value in percents (int)
 #
-lv.id.jc.report.weekly.biorhythm.format=%-12s %4d %%
+biorhythm.format=%-12s %4d %%
 # Alternative format
 #format.weekly.day=\
 #%n  %tA, %<tB %<td, %<tY\
