--- a/src/main/resources/lv/id/jc/service/date-navigator.properties
+++ b/src/main/resources/lv/id/jc/service/date-navigator.properties
@@ -26,3 +26,7 @@ Commands:\
 %n  {today|now|birthday|tomorrow|yesterday|after tomorrow|before yesterday} - set the date\
 %n  {help|info} - this instruction\
 %n  {exit|quit} - finish the program%n
+#
+#
+#
+error=Command "%s" is not recognized. Type HELP for available commands.%n
