Add information about Biorhythm

--- a/src/main/resources/lv/id/jc/biorhythm/service/date-navigator.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/date-navigator.properties
@@ -10,8 +10,8 @@
 #   2$ is today (LocalDate)
 #
 welcome=\
-%nBirthday: %tA, %<tB %<td, %<tY\
-%nSelected: %tA, %<tB %<td, %<tY%n%n
+    %nBirthday: %tA, %<tB %<td, %<tY\
+    %nSelected: %tA, %<tB %<td, %<tY%n%n
 #
 # Format for the prompt
 #
@@ -21,12 +21,31 @@ welcome=\
 prompt=%tF> 
 
 help=\
-Commands:\
-%n  {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years\
-%n  {today|now|birthday|tomorrow|yesterday|after tomorrow|before yesterday} - set the date\
-%n  {help|info} - this instruction\
-%n  {exit|quit} - finish the program%n
+    %nCommands:%n\
+    %n  {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years\
+    %n  {today|now|birthday|tomorrow|yesterday|after tomorrow|before yesterday} - set the date\
+    %n  {help|info} - this instruction\
+    %n  {exit|quit} - finish the program%n
 #
 #
 #
-error=Command "%s" is not recognized. Type HELP for available commands.%n
+unrecognized=\
+    Command "%s" is not recognized. Type HELP for available commands.%n
+
+info=\
+    %nAbout Biorhythms%n%n\
+    According to the theory, our lives are affected by three%n\
+    primary biorhythms: Emotional, Physical, and Intellectual.%n\
+    Others claim that there are additional secondary biorhythms%n\
+    (Spiritual, Intuition, Awareness, and Aesthetic) some of which%n\
+    may be combinations of the three primaries. Biorhythms start%n\
+    at birth and then oscillate between a positive phase and a%n\
+    negative phase throughout the lifetime.%n%n\
+    iorhythm supporters claim that when a biorhythm is at a positive%n\
+    phase, people may feel or be able to perform better for activities%n\
+    related to that biorhythm. Conversely, when a biorhythm is%n\
+    at a negative phase, a bad mood or difficulties to carry out%n\
+    activities related to that biorhythm may be experienced. When%n\
+    a biorhythm crosses the middle line it is considered to be%n\
+    in a “critical” time.%n%n
+
