--- a/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
@@ -24,7 +24,7 @@ annual.header.format=\
 %n      %1$-33s %2$35s%n
 annual.months.format=\
 %n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
-%n      POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI   POI%n
+%n      PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI%n
 Well=*
 Usually=+
 Danger=0
