--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "org.sonarqube" version "3.3"
     id 'java'
     id 'groovy'
 }
@@ -28,4 +29,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "rabestro_biorhythm-calculator-draft"
+    property "sonar.organization", "rabestro"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
