--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id "org.sonarqube" version "3.3"
     id 'java'
     id 'groovy'
 }
@@ -29,6 +28,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+plugins {
+  id "org.sonarqube" version "3.3"
 }
 
 sonarqube {
