--- a/src/main/resources/lv/id/jc/biorhythm/report/zodiac-sign-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/zodiac-sign-report.properties
@@ -9,7 +9,7 @@
 # Used arguments:
 #   1$ is a Zodiac Sign (String)
 #   2$ is a Zodiac Symbol (String)
-#   3$..6$ are dates (MonthDay & String)
+#   3$..4$ are dates (MonthDay) formatted as (String)
 #   7$ is a lucky day (DayOfWeek)
 #   8$ are Lucky Numbers (String)
 #
@@ -24,8 +24,8 @@
 zodiacSign.report=\
     %n   Zodiac Sign: %1$s\
     %n        Symbol: %2$s\
-    %n         Dates: %3$tB %4$s – %5$tB %6$s\
-    %n     Lucky Day: %7$tA\
-    %n Lucky Numbers: %8$s
+    %n         Dates: %3$s - %4$s\
+    %n     Lucky Day: %5$tA%n
+#    %n Lucky Numbers: %6$s
 
 
