Updated Application and other components

--- a/src/main/resources/lv/id/jc/biorhythm/report/age-info-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/age-info-report.properties
@@ -7,21 +7,12 @@
 #
 # Used arguments:
 #   1$ is a birthday (LocalDate)
-#   2$ is a Zodiac Sign (String)
-#   3$ is today (LocalDate)
+#   2$ is today (LocalDate)
 #   3$ is living days (int)
 #   4$ is an age in human friendly format (String)
 #
 format.ageInfo=\
-    %n  Birthday: %tA, %<tB %<td, %<tY (%s)\
-    %n     Today: %tA, %<tB %<td, %<tY\
-    %n      Days: %,d\
-    %n       Age: %s%n
-#
-# Format for a Lucky Day message
-#
-# Used arguments:
-#   2$ is a Zodiac Sign (String)
-format.luckyDay=\
-    %n  Today is a lucky day for a %2$s!%n
-
+    %n   Birthday: %tA, %<tB %<td, %<tY\
+    %n      Today: %tA, %<tB %<td, %<tY\
+    %n       Days: %,d\
+    %n        Age: %s%n
