--- a/src/main/resources/lv/id/jc/biorhythm/report/zodiac-sign-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/zodiac-sign-report.properties
@@ -22,10 +22,17 @@
 # Lucky Numbers: 3, 5, 7, 12, 16, 23, and 39
 #
 zodiacSign.report=\
-    %n   Zodiac Sign: %1$s\
-    %n        Symbol: %2$s\
-    %n         Dates: %3$s - %4$s\
-    %n     Lucky Day: %5$tA%n
+    %nZodiac Sign: %1$s\
+    %n     Symbol: %2$s\
+    %n      Dates: %3$s - %4$s\
+    %n  Lucky Day: %5$tA%n
 #    %n Lucky Numbers: %6$s
 
+#
+# Format for a Lucky Day message
+#
+# Used arguments:
+#   2$ is a Zodiac Sign (String)
+zodiacSign.luckyDay=\
+    %n  Today is a lucky day for a %2$s!%n
 
