--- a/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
@@ -31,8 +31,6 @@ birthday.minimumDate=1900-01-01
 birthday.before.minimum=\
     %nThe date %1$tF is before the minimum date %2$tF.
 #
-#
-#
 # Used arguments:
 #   1$ is the entered date (LocalDate)
 #   2$ is today date (LocalDate)
@@ -42,4 +40,9 @@ birthday.after.today=\
 birthday.parse.exception=\
     %nIncorrect format for date. Please use ISO format YYYY-MM-DD.\
     %nError message: %s%n
-
+#
+# Description for CommandProcessor
+#
+help=\
+%nASK BIRTHDAY       - prompt your to set the new date for a birthday
+##---------+---------+---------+
