--- a/logging-silent.properties
+++ b/logging-silent.properties
@@ -1,4 +1,4 @@
-# -Djava.util.logging.config.file=logging-verbose.properties
+# -Djava.util.logging.config.file=logging-silent.properties
 
 handlers=java.util.logging.FileHandler,java.util.logging.ConsoleHandler
 java.util.logging.FileHandler.level=FINEST
