Issue-63 Add peak and low to SummaryReport

--- a/src/main/resources/lv/id/jc/biorhythm/report/summary-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/summary-report.properties
@@ -44,3 +44,6 @@ Your %2$s may not be at their highest, so it is a good opportunity to work on th
 NEGATIVE_UP=\
 Your are in a negative %1$s cycle, but it coming to an end \
 on %3$s (%4$s)! Work on improving your %2$s as you near your next positive cycle!
+
+summary.next.peak=Your next %s peak is on %s (%s)%n
+summary.next.low=Your next %s low is on %s (%s)%n
