--- a/src/main/resources/lv/id/jc/biorhythm/report/summary-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/summary-report.properties
@@ -16,7 +16,7 @@ summary.header.format=%nToday's Biorhythm Summary Report%n%n
 #   $2 is a biorhythm's value in percents (int)
 #
 short.biorhythm.format=%-12s %4d%%
-summary.biorhythm.name.format=%n%s%n%n
+summary.biorhythm.name.format=%n%s:%n%n
 #
 # Format for a stage descriptions in the Summary Report
 # Please refer enum Stage in biorhythm package
@@ -47,3 +47,7 @@ on %3$s (%4$s)! Work on improving your %2$s as you near your next positive cycle
 
 summary.next.peak=Your next %s peak is on %s (%s)%n
 summary.next.low=Your next %s low is on %s (%s)%n
+
+summary.overall=%nOverall:%n%n
+summary.critical=Your next critical %s day is on %s (%s)%n
+summary.optimal=Your most optimal day this month is on %s (%s)!
