--- a/src/main/resources/lv/id/jc/biorhythm/command/set-date.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/command/set-date.properties
@@ -1,3 +1,3 @@
 help=\
-set <date>      - the date in format YYYY-MM-DD, YYYY, YYYY-MM, MM-DD or one of the words:\
+<date>          - the date in format YYYY-MM-DD, YYYY, YYYY-MM, MM-DD or one of the words:\
 %n                  now, today, birthday, tomorrow, yesterday, after tomorrow, before yesterday%n
