--- a/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
@@ -43,6 +43,4 @@ birthday.parse.exception=\
 #
 # Description for CommandProcessor
 #
-help=\
-%nASK BIRTHDAY       - prompt your to set the new date for a birthday
-##---------+---------+---------+
+help=ask birthday    - prompt your to set the new date for a birthday%n
