--- a/src/main/resources/lv/id/jc/biorhythm/service/command-processor.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/command-processor.properties
@@ -10,8 +10,9 @@
 #   2$ is today (LocalDate)
 #
 welcome=\
-    %nBirthday: %tA, %<tB %<td, %<tY\
-    %nSelected: %tA, %<tB %<td, %<tY%n%n
+    %nCommand processor started.\
+    %n       Birthday: %tF\
+    %n  Selected date: %tF%n%n
 #
 # Format for the prompt
 #
@@ -19,7 +20,6 @@ welcome=\
 #   1$ is a selected date (LocalDate)
 #
 prompt=%tF> 
-
 help=\
     %nCommands:%n\
     %n  {+|-}{number}{d|w|m|q|y} = plus/minus number of days/weeks/months/quarters/years\
@@ -31,7 +31,6 @@ help=\
 #
 unrecognized=\
     Command "%s" is not recognized. Type HELP for available commands.%n
-
 info=\
     %nAbout Biorhythms%n%n\
     According to the theory, our lives are affected by three%n\
