--- a/src/main/resources/lv/id/jc/biorhythm/service/command-processor$help.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/command-processor$help.properties
@@ -2,6 +2,6 @@
 # Description for CommandProcessor
 #
 help=\
-%nAvailable commands%n\
-%nHELP               - display this information
+Available commands%n%n\
+help            - display this information%n
 ##---------+---------+---------+
