Deleted deprecated class from Application

--- a/src/main/resources/lv/id/jc/biorhythm/service/command-processor$help.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/command-processor$help.properties
@@ -3,5 +3,6 @@
 #
 help=\
 Available commands%n%n\
+exit, quit      - exit from the program%n\
 help            - display this information%n
 ##---------+---------+---------+
