Issue-52, Daily Biorhythm improved. Added average.

--- a/src/main/resources/lv/id/jc/biorhythm/report/daily-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/daily-report.properties
@@ -16,21 +16,26 @@
 #   6$ is Awareness biorhythm (String)
 #   7$ is Spiritual biorhythm (String)
 #
-daily.report.format=\
-%n  Daily Biorhythm Report:%n\
+daily.header=\
+%n Daily Biorhythm Report%n\
+%n   Birthday: %tF\
+%nReport date: %tF%n
+
+daily.report=\
 %n  Primary Biorhythms%n\
-%n       %s\
-%n       %s\
-%n       %s%n\
+%n     %2$s\
+%n     %3$s\
+%n     %4$s\
+%n     Average      %1$4.0f%%%n\
 %n  Secondary Biorhythms%n\
-%n       %s\
-%n       %s\
-%n       %s\
-%n       %s%n
+%n     %5$s\
+%n     %6$s\
+%n     %7$s\
+%n     %8$s%n
 # Format for a string representation of a biorhythm
 #
 # Used arguments:
 #   $1 is name of a biorhythm (String)
 #   $2 is a biorhythm's value in percents (int)
 #
-daily.biorhythm.format=%-12s %4d %%
+daily.biorhythm.format=%-12s %4d%%
