Issue-76. Refactored Daily Report to use Indicator

--- a/src/main/resources/lv/id/jc/biorhythm/report/daily-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/daily-report.properties
@@ -23,10 +23,10 @@ daily.header=\
 
 daily.report=\
 %n  Primary Biorhythms%n\
+%n     %1$s\
 %n     %2$s\
 %n     %3$s\
-%n     %4$s\
-%n     Average      %1$4.0f%%%n\
+%n     Average      %4$4.0f%%%n\
 %n  Secondary Biorhythms%n\
 %n     %5$s\
 %n     %6$s\
@@ -38,4 +38,4 @@ daily.report=\
 #   $1 is name of a biorhythm (String)
 #   $2 is a biorhythm's value in percents (int)
 #
-daily.biorhythm.format=%-12s %4d%%
+daily.biorhythm.format=%1$-12s %2$4d%%
