Issue-76. Refactor AnnualReport to use new Indicator class instead of Biorhythm.Value

--- a/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
@@ -25,10 +25,11 @@ annual.header.format=\
 annual.months.format=\
 %n      %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s %-5s\
 %n      PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI   PEI%n
-Well=*
-Usually=+
-Danger=0
-Loose=-
-Tired=.
-Empty=\ 
+condition.well      = *
+condition.usually   = +
+condition.danger    = 0
+condition.loose     = -
+condition.tired     = .
+empty               =\u0020
+
 
