--- a/src/main/resources/lv/id/jc/biorhythm/ui/command/info.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/ui/command/info.properties
@@ -1,4 +1,4 @@
-info=\
+info.about=\
     %nAbout Biorhythms%n%n\
     According to the theory, our lives are affected by three%n\
     primary biorhythms: Emotional, Physical, and Intellectual.%n\
