--- a/src/main/resources/lv/id/jc/biorhythm/ui/command/set-date.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/ui/command/set-date.properties
@@ -1,2 +1,2 @@
 help=\
-<date>          - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY
+<date>          - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY%n
