--- a/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
@@ -9,14 +9,14 @@
 #   1$ is the minimum date (LocalDate)
 #   2$ is the maximum date (LocalDate)
 #
-biorhythm.welcome=\
-    %nPlease specify a birthday in ISO format YYYY-MM-DD.\
-    %nThe date shall not be before %1$tF or after %2$tF%n
+biorhythm.welcome=%n\
+    Please specify a date of birth in format YYYY-MM-DD.%n\
+    The date shall be in the range of %1$tF to %2$tF inclusive.%n
 #
 # Format for birthday's prompt
 #
-birthday.prompt=\
-    %nPlease enter birthday: 
+birthday.prompt=%n\
+    Please enter a birthday >
 #
 # The minimum date for a birthday
 #
@@ -28,8 +28,8 @@ birthday.minimumDate=1900-01-01
 #   1$ is the entered date (LocalDate)
 #   2$ is the minimum date (LocalDate)
 #
-birthday.before.minimum=\
-    %nThe date %1$tF is before the minimum date %2$tF.
+birthday.before.minimum=%n\
+    The date %1$tF is before the minimum date %2$tF.
 #
 # Used arguments:
 #   1$ is the entered date (LocalDate)
@@ -37,9 +37,8 @@ birthday.before.minimum=\
 #
 birthday.after.today=\
     %nThe date %1$tF is after today %2$tF.
-birthday.parse.exception=\
-    %nIncorrect format for date. Please use ISO format YYYY-MM-DD.\
-    %nError message: %s%n
+birthday.parse.exception=%n%1$s.%n\
+    Please use ISO format YYYY-MM-DD.%n
 #
 # Description for CommandProcessor
 #
