Fixed error in AskBirthday

--- a/src/main/resources/lv/id/jc/biorhythm/report/zodiac-info.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/zodiac-info.properties
@@ -34,5 +34,5 @@ zodiacSign.report=\
 # Used arguments:
 #   2$ is a Zodiac Sign (String)
 zodiacSign.luckyDay=\
-    %n  Today is a lucky day for a %2$s!%n
+    %n  Today is a lucky day for %2$s!%n
 
