--- a/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
@@ -9,9 +9,9 @@
 #   1$ is the minimum date (LocalDate)
 #   2$ is the maximum date (LocalDate)
 #
-biorhythm.welcome=%n\
+biorhythm.instruction=%n\
     Please specify a date of birth in format YYYY-MM-DD.%n\
-    The date shall be in the range of %1$tF to %2$tF inclusive.%n
+    The birthday shall be in the range of %1$tF to %2$tF inclusive.%n
 #
 # Format for birthday's prompt
 #
@@ -29,14 +29,14 @@ birthday.minimumDate=1900-01-01
 #   2$ is the minimum date (LocalDate)
 #
 birthday.before.minimum=%n\
-    The date %1$tF is before the minimum date %2$tF.
+    The date %1$tF is before the minimum date %2$tF.%n
 #
 # Used arguments:
 #   1$ is the entered date (LocalDate)
 #   2$ is today date (LocalDate)
 #
-birthday.after.today=\
-    %nThe date %1$tF is after today %2$tF.
+birthday.after.today=%n\
+    The date %1$tF is after today %2$tF.%n
 birthday.parse.exception=%n%1$s.%n\
     Please use ISO format YYYY-MM-DD.%n
 #
