--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ jacoco {
 
 jacocoTestReport {
     dependsOn test
+    
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
 
 sonarqube {
