Add one test for AgeInfo

--- a/src/main/resources/lv/id/jc/biorhythm/report/age-info.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/age-info.properties
@@ -12,7 +12,7 @@
 #   4$ is an age in human friendly format (String)
 #
 format.ageInfo=\
-    %n   Birthday: %tA, %<tB %<td, %<tY\
-    %n      Today: %tA, %<tB %<td, %<tY\
+    %n   Birthday: %tA, %<tB %<te, %<tY\
+    %n      Today: %tA, %<tB %<te, %<tY\
     %n       Days: %,d\
     %n        Age: %s%n
