--- a/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/ask-birthday.properties
@@ -11,7 +11,7 @@
 #
 biorhythm.instruction=%n\
     Please specify a date of birth in format YYYY-MM-DD.%n\
-    The birthday shall be in the range of %1$tF to %2$tF inclusive.%n
+    It shall be in the range of %1$tF to %2$tF.%n
 #
 # Format for birthday's prompt
 #
