--- a/src/main/resources/lv/id/jc/biorhythm/service/broker.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/broker.properties
@@ -11,8 +11,9 @@
 #
 welcome=\
     %nCommand processor started.\
-    %n      Birthday: %tF\
-    %n Selected date: %tF%n%n
+    %n    Birthday: %tF\
+    %n Report date: %tF%n\
+    %nType help for available commands%n
 #
 # Format for the prompt
 #
