Add tests for Ordinal Date Formatter

--- a/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/annual-report.properties
@@ -7,7 +7,7 @@
 # Used arguments:
 #   1$ is the birthday (LocalDate)
 #
-annual.header.left.format=Birthday: %tF
+annual.header.left.format=Birthday: %s
 # Format for the left part of header
 #
 # Used arguments:
