closed #110 added help for reports

--- a/src/main/resources/help.properties
+++ b/src/main/resources/help.properties
@@ -20,3 +20,7 @@ help.WeeklyReport=\
 weekly report  - print weekly report for week of selected date. Report printed from Monday to Sunday.%n
 help.MonthlyReport=\
 monthly report - print monthly report for month of selected date%n
+help.AnnualReport=\
+annual report  - print annual report for year of selected date%n
+help.SummaryReport=\
+summary report - print summary report for selected date%n
