--- a/src/main/resources/lv/id/jc/biorhythm/report/info.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/info.properties
@@ -1,3 +1,7 @@
+#
+info.none=\
+  %nNo information about "%s"%n
+#
 info.about=\
     %nAbout Biorhythms%n%n\
     According to the theory, our lives are affected by three%n\
@@ -15,3 +19,15 @@ info.about=\
     a biorhythm crosses the middle line it is considered to be%n\
     in a "critical" time.%n%n
 
+info.physical=\
+  The Physical cycle regulates the strength, metabolic rate, sex drive,%n\
+  initiative, stamina, and eye and hand coordination. Your Physical cycle %n\
+  is situated in muscle tissues and fibers, affecting the general physical %n\
+  condition. It is considered the masculine cycle. For instance, from day 2 %n\
+  through day 11 your physical state is charging, so the physical work goes %n\
+  easier and you have high level of vitality and feel more vigorous, while the %n\
+  level of your endurance is higher. Critical points are Day 1 and 12. %n\
+  So, the three basic aspects of Physical cycle are:\
+%n   - Strength\
+%n   - Coordination\
+%n   - Well being%n
