Added fortnight report

--- a/src/main/resources/lv/id/jc/biorhythm/report/fortnight/fortnight-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/fortnight/fortnight-report.properties
@@ -8,31 +8,17 @@
 #   1$ is the selected date (LocalDate)
 #   2$ is the selected week number in the year (int)
 #
-monthly.header.format=\
-%n  Monthly Biorhythm Report\
-%n  Year: %d, Month: %s:%n
-# Format for a day in the Weekly Report
+fortnight.header.format=\
+%n Fortnight report %1$79s %2$s%n
 #
 # Used arguments:
 #   1$ is the selected date (LocalDate)
 #   2$ is physical biorhythm (String)
 #   3$ is emotional biorhythm (String)
 #   3$ is intellectual biorhythm (String)
-#
-# Format for a string representation of a biorhythm
-#
-# Used arguments:
-#   $1 is name of a biorhythm (String)
-#   $2 is a biorhythm's value in percents (int)
-#
+
 biorhythm.format=%-1s: %4d %%
 
 biorhythm.short.format=%4d %%
-# Alternative format
-#format.weekly.day=\
-#%n  %tA, %<tB %<td, %<tY\
-#%n      %s\
-#%n      %s\
-#%n      %s%n
 
 week.value.format=%13s
