--- a/src/main/resources/help.properties
+++ b/src/main/resources/help.properties
@@ -1,3 +1,5 @@
+# suppress inspection "UnusedProperty" for whole file
+#
 # Resources for Help system
 #
 # For format syntax please refer to class Formatter
@@ -7,6 +9,28 @@
 #
 help.default=No help for class %s%n
 #
+# Command Processors native commands
+#
+help.Help=\
+help           - prints information about available commands%n\
+exit           - stops the command processor and exits from the program%n
+#
+# Commands from Stage 1
+#
+help.AskBirthday=\
+ask birthday   - Requests a new date of birth%n
+help.AgeInfo=\
+age info       - Calculates and prints age information for the report date%n
+help.ZodiacInfo=\
+zodiac info    - Prints Zodiac Sign info for the entered birthday%n
+#
+# Commands added at Stage 2
+#
+help.DailyReport=\
+daily report   - prints daily biorhythms report for selected date%n
+#
+# Stage 3
+#
 help.DateMover=\
 <shift>        - shift the report date by number of days, weeks, fortnights, months or years.\
 %n                 Format: {+|-}{number}{d|w|m|q|y}, examples: +3d, -7w, +1f, +9m, +1y.%n
@@ -14,8 +38,6 @@ help.SetDateByName=\
 <keyword>      - keywords are now, today, tomorrow, after tomorrow, yesterday, before yesterday.%n
 help.DateSetter=\
 <date>         - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY%n
-help.DailyReport=\
-daily report   - print daily report for selected date%n
 help.WeeklyReport=\
 weekly report  - print weekly report for week of selected date. Report printed from Monday to Sunday.%n
 help.MonthlyReport=\
