--- a/src/main/resources/lv/id/jc/biorhythm/service/broker.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/service/broker.properties
@@ -11,15 +11,14 @@
 #
 welcome=\
     %nCommand processor started.\
-    %n    Birthday: %tF\
-    %n Report date: %tF%n\
-    %nType help for available commands%n
+    %nType help for available commands%n%n
 #
 # Format for the prompt
 #
 # Used arguments:
 #   1$ is a selected date (LocalDate)
 #
+# suppress inspection "TrailingSpacesInProperty"
 prompt=%tF> 
 help=\
     %nCommands:%n\
