--- a/src/main/resources/help.properties
+++ b/src/main/resources/help.properties
@@ -32,10 +32,10 @@ daily report   - prints daily biorhythms report for selected date%n
 # Stage 3
 #
 help.DateMover=\
-<shift>        - shift the report date by number of days, weeks, fortnights, months or years.\
-%n                 Format: {+|-}{number}{d|w|m|q|y}, examples: +3d, -7w, +1f, +9m, +1y.%n
+{+/-}{n}{u}    - move the report date by number of days, weeks, fortnights, months or years.\
+%n                 examples: +3d (plus 3 days), -7w (minus 7 weeks), +1f (plus one fortnight).%n
 help.SetDateByName=\
-<keyword>      - keywords are now, today, tomorrow, after tomorrow, yesterday, before yesterday.%n
+<keyword>      - now, today, tomorrow, after tomorrow, yesterday, before yesterday, epoch.%n
 help.DateSetter=\
 <date>         - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY%n
 help.WeeklyReport=\
