--- a/src/main/resources/lv/id/jc/biorhythm/report/age-info.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/age-info.properties
@@ -11,8 +11,13 @@
 #   3$ is living days (int)
 #   4$ is an age in human friendly format (String)
 #
-format.ageInfo=\
+ageInfo.today=\
     %n   Birthday: %tA, %<tB %<te, %<tY\
     %n      Today: %tA, %<tB %<te, %<tY\
+    %n       Days: %,d\
+    %n        Age: %s%n
+ageInfo.report=\
+    %n   Birthday: %tA, %<tB %<te, %<tY\
+    %n     Report: %tA, %<tB %<te, %<tY\
     %n       Days: %,d\
     %n        Age: %s%n
