Added help information about commands

--- a/src/main/resources/help.properties
+++ b/src/main/resources/help.properties
@@ -18,31 +18,47 @@ exit           - stops the command processor and exits from the program%n
 # Commands from Stage 1
 #
 help.AskBirthday=\
-ask birthday   - Requests a new date of birth%n
+ask birthday     - Requests a new date of birth%n
 help.AgeInfo=\
-age info       - Calculates and prints age information for the report date%n
+age info         - Calculates and prints age information for the report date%n
 help.ZodiacInfo=\
-zodiac info    - Prints Zodiac Sign info for the entered birthday%n
+zodiac info      - Prints Zodiac Sign info for the entered birthday%n
 #
 # Commands added at Stage 2
 #
-help.DailyReport=\
-daily report   - prints daily biorhythms report for selected date%n
+help.DailyReport=%n\
+daily report     - prints daily biorhythms report for selected date%n
 #
 # Stage 3
 #
-help.DateMover=\
-{+/-}{n}{u}    - move the report date by number of days, weeks, fortnights, months or years.\
-%n                 examples: +3d (plus 3 days), -7w (minus 7 weeks), +1f (plus one fortnight).%n
+help.DateMover=%n\
+{+/-}{n}{u}      - moves the report date by number of days, weeks, fortnights, months or years.\
+%n                   examples: +3d (plus 3 days), -7w (minus 7 weeks), +1f (plus one fortnight).%n
 help.SetDateByName=\
-<keyword>      - now, today, tomorrow, after tomorrow, yesterday, before yesterday, epoch.%n
+<keyword>        - now, today, tomorrow, after tomorrow, yesterday, before yesterday, epoch.%n
 help.DateSetter=\
-<date>         - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY%n
+<date>           - set the date in format YYYY-MM-DD, YYYY-MM, MM-DD, YYYY%n
+# Stage 4
 help.WeeklyReport=\
-weekly report  - print weekly report for week of selected date. Report printed from Monday to Sunday.%n
+weekly report    - prints weekly report for week of selected date. Report printed from Monday to Sunday.%n
+help.FortnightReport=\
+fortnight report - prints fortnight report for date, adjusted to the monday.%n
+help.DateWith=\
+<month>          - adjusts date to month. Example: January%n\
+<day of week>    - adjusts date to day of week. Example: Sunday%n
+help.DateAdjuster=\
+next <DoW>       - move date to the next day of week. Example: next sunday%n\
+prev <DoW>       - move date to the previous day of week. Example: prev monday%n
+# Stage 5
 help.MonthlyReport=\
-monthly report - print monthly report for month of selected date%n
+monthly report   - prints monthly report for month of selected date%n
+# Stage 6
 help.AnnualReport=\
-annual report  - print annual report for year of selected date%n
+annual report    - prints annual report for year of selected date%n
+# Stage 7
 help.SummaryReport=\
-summary report - print summary report for selected date%n
+summary report   - prints summary report for selected date%n
+# Stage 8
+help.TripleChart=\
+triple chart     - draws triple graphs for primary biorhythms%n
+
