#109 Introduce Roman Date Setter

--- a/src/main/resources/help.properties
+++ b/src/main/resources/help.properties
@@ -55,6 +55,8 @@ monthly report   - prints monthly report for month of selected date%n
 # Stage 6
 help.AnnualReport=\
 annual report    - prints annual report for year of selected date%n
+help.RomanDateSetter=\
+<roman date>     - reads and parse date with roman months. Example: 31/XII/2021%n
 # Stage 7
 help.SummaryReport=\
 summary report   - prints summary report for selected date%n
