--- a/src/main/resources/lv/id/jc/biorhythm/report/monthly/monthly-report.properties
+++ b/src/main/resources/lv/id/jc/biorhythm/report/monthly/monthly-report.properties
@@ -1,4 +1,4 @@
-# Resources for Weekly Biorhythms Report
+# Resources for Monthly Biorhythms Report
 #
 # For format syntax please refer to class Formatter
 # https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/util/Formatter.html
